Try running luciddream on tc.

--- a/testing/taskcluster/tasks/branches/base_job_flags.yml
+++ b/testing/taskcluster/tasks/branches/base_job_flags.yml
@@ -112,6 +112,7 @@ flags:
     - crashtest
     - crashtest-e10s
     - crashtest-ipc
+    - devtools
     - gaia-build
     - gaia-build-unit
     - gaia-js-integration
