--- a/testing/taskcluster/tasks/branches/try/job_flags.yml
+++ b/testing/taskcluster/tasks/branches/try/job_flags.yml
@@ -8,6 +8,7 @@ $inherits:
 # Flags specific to this branch
 flags:
   post-build:
+    - simulator
     - upload-symbols
 
 builds:
@@ -135,6 +136,10 @@ builds:
         task: tasks/builds/sm_warnaserrdebug.yml
 
 post-build:
+  simulator:
+    allowed_build_tasks:
+      - tasks/builds/mulet_linux.yml
+    task: tasks/post-builds/mulet_simulator.yml
   upload-symbols:
     allowed_build_tasks:
       - tasks/builds/opt_linux64.yml
